--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,17 +1,3 @@
-.trendingGallery {
-  grid-gap: 15px;
-  display: grid;
-  justify-items: center;
-  max-width: calc(100vw - 80px);
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 0;
-  margin-bottom: 30px;
-  padding: 0;
-  list-style: none;
-}
-
 .headerTitle {
   text-align: center;
   text-transform: uppercase;
@@ -20,7 +6,7 @@
   font-weight: 600;
 }
 
-.trendingItem {
+/* .trendingItem {
   background-color: #fff;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
@@ -34,4 +20,4 @@
   padding-left: 7px;
   padding-right: 7px;
   color: #3b0303;
-}
+} */
